fix mobile overflow

--- a/style.scss
+++ b/style.scss
@@ -16,21 +16,24 @@ a {
 
 body, html {
   height: 100%;
-  min-height: 100%;
   width: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
   background-color: #30343f;
   color: #fff0ef;
   text-align: center;
 }
 
+html {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 body {
+  min-height: 100%;
   overflow: auto;
   width: 560px;
+  max-width: calc(100% - 16px);
 
   .language {
     position: absolute;
@@ -91,14 +94,5 @@ body {
     width: 560px;
     height: 315px;
     max-width: 100%;
-  }
-}
-
-@media all and (max-width: 750px) {
-  body {
-    width: 90%;
-
-    .youtube {
-    }
   }
 }
